Volvi como estaba, male sal

--- a/style.css
+++ b/style.css
@@ -29,7 +29,6 @@
 
 :link {
     text-decoration: none;
-
 }
 
 .fondo {
@@ -53,15 +52,14 @@
 
 .menu-1 {
     font-family: 'Quicksand', sans-serif;
-    /*display: flex;
+    display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;*/
+    flex-wrap: wrap;
 
-    display: grid;
+    /*display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 
-
-    align-items: center;
+    align-items: center;*/
     list-style: none;
     position: relative;
     top: -20px;
@@ -71,33 +69,32 @@
     text-align: center;
 }
 
-
-.palabra1, .palabra2, .palabra3, .palabra4, .palabra5{
+/*
+.palabra1{
     background-color: lightblue;
     padding: 20px 5px;
-    transition: background-color 0.5s;
 
 }
-
-.palabra1:hover{
-    background-color: lightcoral;
-    
-}
-.palabra2:hover{
-    background-color: lightcoral;
-}
-.palabra3:hover{
-    background-color: lightcoral;
+.palabra2{
+    background-color: lightsalmon;
+    padding: 20px 5px;
 }
 
-.palabra4:hover{
-    background-color: lightcoral;
+.palabra3{
+    background-color: lightgreen;
+    padding: 20px 5px;
 }
 
-.palabra5:hover{
-    background-color: lightcoral;
+.palabra4{
+    background-color: lightslategray;
+    padding: 20px 5px;
 }
 
+.palabra5{
+    background-color: lightcyan;
+    padding: 20px 5px;
+}
+/*
 .novedades {
     font-family: 'Quicksand', sans-serif;
     margin-left: 10px;
@@ -105,9 +102,7 @@
     letter-spacing: 2px;
     font-weight: bold;
     font-size: x-large;
-
 }
-
 
 .imagen_corte {
     width: 30%;
@@ -120,7 +115,6 @@
     letter-spacing: 2px;
     font-weight: bold;
     font-size: x-large;
-
 }
 
 .estructura-footer {
@@ -201,8 +195,8 @@
 
 
 
-/* ------------ Esto no lo voy a poner pero lo dejo por las dudas ----------- */
-/*.rulas-lacias {
+
+.rulas-lacias {
     display: flex;
     justify-content: space-around;
 }
@@ -215,8 +209,7 @@
 .titulo-lacias {
     font-family: amsterdam;
     font-size: 400%;
-}*/
-/* ------------ Esto no lo voy a poner pero lo dejo por las dudas ----------- */
+}
 
 .bekim {
     font-family: 'Quicksand', sans-serif;
@@ -302,10 +295,6 @@
 /* ------------------------ Primer lina de productos ------------------------ */
 .img1 {
     grid-area: img1;
-
-    background-image: url(multimedia/Bekim/bekim-img1.jpg);
-    background-size: contain;
-
 }
 
 .img2 {
