--- a/style.css
+++ b/style.css
@@ -240,19 +240,61 @@ nav ul li a {
 
 
 /* -------------------------------- Productos ------------------------------- */
+@media screen and (max-width: 1000px) {
+
+    .titulo-productos {
+        display: flex;
+        justify-content: center;
+        background-color: #F3E9DD;
+        color: rgb(88, 71, 67);
+        font-family: brittany;
+    
+        font-size: 10px;
+        padding: 100px;
+    }
+
+    .contenedor {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 2fr repeat(2 1fr) 2fr repeat(2 1fr) 2fr repeat(2 1fr) ;
+        column-gap: 30px;
+        grid-template-areas:
+            "img1 img2 img3 "
+            "titulo1 titulo2 titulo3 "
+            "desc1 desc2 desc3 "
+    
+            "img5 img6 img7 "
+            "titulo5 titulo6 titulo7 "
+            "desc5 desc6 desc7 "
+    
+            "img9 img10 img11 "
+            "titulo9 titulo10 titulo11 "
+            "desc9 desc10 desc11 ";
+    
+        margin: 0 20px;
+        padding: 60px 0;
+        list-style: none;
+        text-align: center;
+    }
+    
+}
 
 .fondo-productos {
     background-color: #F3E9DD;
     position: relative;
     bottom: 100px;
+    
 }
 
+
+/*
 .linea {
     background-color: rgb(134, 83, 49);
     padding: 3px;
     position: relative;
     top: 100px
-}
+} */
+
 
 .titulo-productos {
     background-color: #F3E9DD;
@@ -260,8 +302,7 @@ nav ul li a {
     font-family: brittany;
     text-align: center;
     font-size: 500%;
-    padding-top: 80px;
-    margin: 100px 0;
+    padding:130px;
 }
 
 
@@ -286,7 +327,7 @@ nav ul li a {
 .bekim {
     font-family: 'Quicksand', sans-serif;
     font-size: x-large;
-    background-color: rgba(240, 128, 128, 0.527);
+    background-color: rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     padding: 10px;
