--- a/style.css
+++ b/style.css
@@ -921,13 +921,13 @@ nav ul li a {
 @media screen and (max-width: 1000px) {
 
     .titulo-productos {
-        display: flex;
+        display: block;
         justify-content: center;
         background-color: #F3E9DD;
         color: rgb(88, 71, 67);
         font-family: brittany;
-        font-size: 250%;
-        padding: 80px;
+        font-size: 200%;
+        padding: 80px 50px;
         margin-top: 10px;
     }
 
@@ -935,7 +935,7 @@ nav ul li a {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 2fr repeat(2 1fr) 2fr repeat(2 1fr) 2fr repeat(2 1fr);
-        column-gap: 30px;
+        column-gap: 20px;
         grid-template-areas:
             "img1 img2 img3 "
             "titulo1 titulo2 titulo3 "
@@ -953,8 +953,8 @@ nav ul li a {
             "titulo10 titulo11 titulo12 "
             "desc10 desc11 desc12 ";
 
-        margin: 0 20px;
-        padding: 60px 0;
+        margin: 0 8px;
+        padding: 50px 0;
         list-style: none;
         text-align: center;
     }
