--- a/style.css
+++ b/style.css
@@ -1149,6 +1149,8 @@ nav ul li a {
         font-size: 300%;
         padding-top: 70px;
         margin-top: 10px;
+        transition-property: all;
+        transition-duration: 1s;
     }
 }
 
