--- a/style.css
+++ b/style.css
@@ -970,6 +970,9 @@ nav ul li a {
         padding: 50px 0;
         list-style: none;
         text-align: center;
+
+    }
+   
     }
 
     .contenedor2 {
